Added security analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=JS-sample
+sonar.projectKey=a-gokulakannan_weather_app_63fd7f83-f3e7-4e8b-8ea8-c2d542711dae
 sonar.projectName=JS-sample
 sonar.sources=.
 sonar.exclusions=node_modules/**,dist/**,coverage/**,**/*.test.js
