--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=a-gokulakannan_weather_app_63fd7f83-f3e7-4e8b-8ea8-c2d542711dae
-sonar.projectName=JS-sample
+sonar.projectName=weather_app
 sonar.sources=.
 sonar.exclusions=node_modules/**,dist/**,coverage/**,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
