--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.sources=.
 sonar.exclusions=node_modules/**,dist/**,coverage/**,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
+sonar.host.url=http://192.168.29.221:9000
