--- a/.github/workflows/sonarqube-analysis.yml
+++ b/.github/workflows/sonarqube-analysis.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   build:
-    name: Build and analyze
-    runs-on: ubuntu-latest
+    name: Test and Analyze
+    runs-on: [self-hosted, Windows, X64] 
     
     steps:
       - uses: actions/checkout@v4
