--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,6 @@ sonar.sources=.
 sonar.exclusions=node_modules/**,dist/**,coverage/**,**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://192.168.29.221:9000
+sonar.host.url=http://localhost:9000
+
+
